Adding new states

--- a/Compilador/Compilador.csproj
+++ b/Compilador/Compilador.csproj
@@ -10,6 +10,7 @@
     <Folder Include="AnalisisSintatico\" />
     <Folder Include="AnalisisSemantico\" />
     <Folder Include="ManejadorErrores\" />
+    <Folder Include="TablaSimbolos\" />
   </ItemGroup>
 
 </Project>
